Improvements to silverwolf theme

--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -93,7 +93,7 @@ td.select {
 }
 
 table.selection {
-	background-color:#eee;
+	background-color:#DCDCDC;
 	outline-style:solid;
 	outline-color: #8e8a8a;
 	outline-width:1px;
