Improvements to Fresh theme

--- a/css/fresh/default.css
+++ b/css/fresh/default.css
@@ -106,11 +106,11 @@ td.number {
 }
 
 .EvenTableRows {
-	background-color: #CCCCCC;
+	background-color: #72824D;
 }
 
 .OddTableRows {
-	background-color: #EEEEEE;
+	background-color: #CAF17C;
 }
 
 th {
