--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -96,6 +96,7 @@ table.selection {
 	margin-bottom: 5px;
 	background-color:#DCDCDC;
 	border: solid #A49999 1px;
+	border-radius: 5px;
 	-moz-box-shadow: 3px 3px 2px #888;
 	-webkit-box-shadow: 3px 3px 2px #888;
 	box-shadow: 3px 3px 2px #888;
@@ -210,6 +211,7 @@ input {
 	border-left-style: solid;
 	border-right-color: gray;
 	border-right-style: solid;
+	border-radius: 3px;
 }
 
 button {
@@ -243,6 +245,7 @@ input:hover {
 	border-left-style: solid;
 	border-right-color: gray;
 	border-right-style: solid;
+	border-radius: 3px;
 }
 
 input.number {
@@ -643,11 +646,12 @@ p.page_title_text {
         border-style: solid;
         border-width: 1px;
         border-color: #666;
+        border-radius: 5px;
 		margin: 10px auto;
 		text-align:center;
-	-moz-box-shadow: 5px 5px 3px #888;
-	-webkit-box-shadow: 5px 5px 3px #888;
-	box-shadow: 5px 5px 3px #888;
+	-moz-box-shadow: 3px 3px 2px #888;
+	-webkit-box-shadow: 3px 3px 2px #888;
+	box-shadow: 3px 3px 2px #888;
 }
 
 div.page_help_text {
