--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -18,7 +18,7 @@
 /* $Id$*/
 
 body {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10px;
 	background-color: #fff;
 	margin-left: 0px;
@@ -40,7 +40,7 @@ li { list-style-image: url(bullet.gif); ¡ bullet.gif only exist in fresh theme 
 
 /*links before selection */
 a {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	font-weight: normal;
 	text-decoration: none;
@@ -83,7 +83,7 @@ th.number {
 
 /*table detail items default format */
 td {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	text-align: left;
 }
@@ -184,7 +184,7 @@ div.info {
 }
 
 textarea {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	background-color: #e3e1e1;
 	border-width:1px;
@@ -199,9 +199,25 @@ textarea {
 }
 
 input {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	background-color: #e3e1e1;
+	border-width:1px;
+	border-bottom-color: gray;
+	border-bottom-style: solid;
+	border-top-color: gray;
+	border-top-style: solid;
+	border-left-color: gray;
+	border-left-style: solid;
+	border-right-color: gray;
+	border-right-style: solid;
+	border-radius: 3px;
+}
+
+input:hover {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 100%;
+	background-color: #e3e5f5;
 	border-width:1px;
 	border-bottom-color: gray;
 	border-bottom-style: solid;
@@ -232,22 +248,6 @@ button {
 	box-shadow: 0 1px 2px rgba(0,0,0,.2);	border-right-style: solid;
 }
 
-input:hover {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
-	font-size: 100%;
-	background-color: #e3e5f5;
-	border-width:1px;
-	border-bottom-color: gray;
-	border-bottom-style: solid;
-	border-top-color: gray;
-	border-top-style: solid;
-	border-left-color: gray;
-	border-left-style: solid;
-	border-right-color: gray;
-	border-right-style: solid;
-	border-radius: 3px;
-}
-
 input.number {
 	text-align: right;
 }
@@ -262,7 +262,7 @@ input:hover { }
 */
 
 select {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 }
 
@@ -335,7 +335,7 @@ textarea.texterror {
 
 /* From merge, uncomment to apply styles
 textarea {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 }
 
@@ -373,7 +373,7 @@ div.csv {
         VISIBILITY: visible;
         MARGIN: 0 auto;
         POSITION: static;
-        font-family: Arial, Verdana, Helvetica, sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         padding-top: 1px;
         padding-bottom: 1px;
         font-weight: normal;
@@ -383,7 +383,7 @@ div.csv {
 End Merge */
 
 .callout_main {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	background-color: white;
 	border: none;
 	width: 100%;
@@ -422,7 +422,7 @@ End Merge */
 /*The main page heading left part before quick menu */
 .quick_menu_left {
 	background: none;
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	font-weight: bold;
 	border: none;
@@ -569,7 +569,7 @@ End Merge */
 }
 
 span.main_menu_nolink {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	font-weight: bold;
 	color: #777;
@@ -611,7 +611,7 @@ span.main_menu_nolink {
 }
 
 .menu_group_headers_text {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	font-weight: bold;
 	color: black;
@@ -635,7 +635,7 @@ span.main_menu_nolink {
 }
 
 p.page_title_text {
-        font-family: Arial, Verdana, Helvetica, sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         padding-top: 2px;
         padding-bottom: 2px;
         font-weight: bold;
@@ -666,7 +666,7 @@ div.page_help_text {
         visibility: visible;
         margin: 0 auto;
         position: static;
-        font-family: Verdana, Arial, Helvetica;
+        font-family: Arial, Helvetica;
         font-weight: normal;
         font-size: 100%;
         color: black;
@@ -689,7 +689,7 @@ DIV.system_check {
         MARGIN: 0 auto;
         POSITION: static;
         background: lightgray;
-        font-family: Verdana, Arial, Helvetica;
+        font-family: Arial, Helvetica;
         padding-top: 1px;
         padding-bottom: 1px;
         font-weight: normal;
@@ -701,7 +701,7 @@ DIV.system_check {
 End merge */
 
 span.menu_group_nolink {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	font-weight: normal;
 	color: #777;
@@ -719,14 +719,16 @@ span.menu_group_nolink {
 #footer {
 	border-top: solid 1px #aaa;
 	border-bottom: solid 1px #aaa;
+	border-radius: 6px;
 	background: #ccc url(images/menu_bg_grey.png) 0px 0px repeat-x;
 	position: relative;
 	bottom: -3px;
+	width: 99%;
 }
 
 /* From merge
 a.footer {
-	font-family: Verdana, Arial, Helvetica;
+	font-family: Arial, Helvetica;
 	color: black;
 	font-weight: normal;
 	font-size: 8px;
@@ -734,7 +736,7 @@ a.footer {
 End merge */
 
 .footer {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	color: black;
 	font-weight: normal;
 	font-size: 10px;
@@ -754,19 +756,19 @@ End merge */
 }
 
 .promo {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	color: #003;
 }
 
 .titlebar {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 9px;
 	color: white;
   	background-color: #369;
 }
 
 .dingbat {
-	font-family: Arial, Verdana, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	background-color: #9c9;
 	color: #066;
 	font-weight: bolder;
