--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -78,7 +78,7 @@ th.number {
 }
 
 th.header {
-	font-weight: normal;
+	font-weight: bold;
 	background: -moz-linear-gradient(left, #DCDCDC, #8D98A6);
 	background: -webkit-linear-gradient(left, #DCDCDC, #8D98A6);
 	font-size: 16px;
@@ -107,8 +107,8 @@ td.select {
 
 table.selection {
 	margin-bottom: 5px;
-	background: -moz-linear-gradient(left, #DCDCDC, #8D98A6);
-	background: -webkit-linear-gradient(left, #DCDCDC, #8D98A6);
+	background: -moz-linear-gradient(left, #DCDCDC, #9CA4AE);
+	background: -webkit-linear-gradient(left, #DCDCDC, #9CA4AE);
 	border: solid #A49999 1px;
 	border-radius: 5px;
 	-moz-box-shadow: 3px 3px 2px #B1B1B1;
@@ -615,10 +615,12 @@ span.main_menu_nolink {
 }
 
 .menu_group_headers {
-	background: #B3B3B3;
+	background: transparent;
+	font-weight: bold;
+	border: 1px solid #888;
+	border-radius: 5px;
 	width: 25%;
 	vertical-align: top;
-	padding: 0 0 2px 0;
 }
 
 .menu_group_headers table {
