--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -279,6 +279,19 @@ input:hover { }
 select {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
+	background: transparent;
+	border-width: 1px;
+	border-bottom-color: gray;
+	border-bottom-style: solid;
+	border-top-color: gray;
+	border-top-style: solid;
+	border-left-color: gray;
+	border-left-style: solid;
+	border-right-color: gray;
+	border-right-style: solid;
+	-webkit-border-radius: .5em;
+	-moz-border-radius: .5em;
+	border-radius: .5em;
 }
 
 font.good {
