--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -214,7 +214,7 @@ div.info {
 textarea {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
-	background-color: #e3e1e1;
+	background-color: transparent;
 	border-width:1px;
 	border-bottom-color: gray;
 	border-bottom-style: solid;
