--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -18,7 +18,7 @@
 /* $Id$*/
 
 body {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 10px;
 	background-color: #fff;
 	margin-left: 0px;
@@ -40,11 +40,11 @@ li { list-style-image: url(bullet.gif); ¡ bullet.gif only exist in fresh theme 
 
 /*links before selection */
 a {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 100%;
 	font-weight: normal;
 	text-decoration: none;
-	color: #5B5B68;
+	color: #272736;
 }
 
 /*links on any screen except quick menu which is overridden when mouse is hovering over them */
@@ -71,7 +71,7 @@ th {
 
 th.number {
 	font-weight: normal;
-	background-color: #cccce5;
+	background-color: transparent;
 	border-radius: 5px;
 	font-size: 100%;
 	color: #300;
@@ -107,7 +107,7 @@ th.header {
 
 /*table detail items default format */
 td {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 100%;
 	text-align: left;
 	background-color: transparent;
@@ -141,10 +141,14 @@ div.centre {
 
 .EvenTableRows {
 	background-color: #ccc;
+	border: solid #A49999 1px;
+	border-radius: 5px;
 }
 
 .OddTableRows {
 	background-color: #eee;
+	border: solid #A49999 1px;
+	border-radius: 5px;
 }
 
 .dpTbl {
@@ -212,7 +216,7 @@ div.info {
 }
 
 textarea {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 100%;
 	background-color: transparent;
 	border-width:1px;
@@ -224,10 +228,11 @@ textarea {
 	border-left-style: solid;
 	border-right-color: gray;
 	border-right-style: solid;
+	border-radius: 5px;
 }
 
 input {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 100%;
 	background-color: transparent;
 	border-width:1px;
@@ -244,7 +249,7 @@ input {
 }
 
 input:hover {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 100%;
 	background-color: transparent;
 	border-width:1px;
@@ -260,22 +265,49 @@ input:hover {
 }
 
 button {
-	display: inline-block;
-	outline: none;
-	cursor: pointer;
-	text-align: center;
-	text-decoration: none;
-	font: 10px/100% Arial, Helvetica, sans-serif;
-	padding: .1em 1em .2em;
-	background-color: #e3e1e1;
-	margin-bottom: 2px;
-	-webkit-border-radius: .5em;
-	-moz-border-radius: .5em;
-	border-radius: .5em;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
-	box-shadow: 0 1px 2px rgba(0,0,0,.2);	border-right-style: solid;
+  background-color: #9F9F9F;
+  border-top: 1px solid #abbbcc;
+  border-left: 1px solid #a7b6c7;
+  border-bottom: 1px solid #a1afbf;
+  border-right: 1px solid #a7b6c7;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  -webkit-box-shadow: inset 0 1px 0 0 white;
+  -moz-box-shadow: inset 0 1px 0 0 white;
+  box-shadow: inset 0 1px 0 0 white;
+  color: #092442;
+  font: normal 10px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+  line-height: 1;
+  padding: 3px 3px 3px 3px;
+  margin-right: 3px;
+  text-align: center;
 }
+
+ button:hover {
+    background-color: #ccd9e8;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ccd9e8), color-stop(100%, #c1d4e8));
+    background-image: -webkit-linear-gradient(top, #ccd9e8, #c1d4e8);
+    background-image: -moz-linear-gradient(top, #ccd9e8, #c1d4e8);
+    background-image: -ms-linear-gradient(top, #ccd9e8, #c1d4e8);
+    background-image: -o-linear-gradient(top, #ccd9e8, #c1d4e8);
+    background-image: linear-gradient(top, #ccd9e8, #c1d4e8);
+    border-top: 1px solid #a1afbf;
+    border-left: 1px solid #9caaba;
+    border-bottom: 1px solid #96a3b3;
+    border-right: 1px solid #9caaba;
+    -webkit-box-shadow: inset 0 1px 0 0 #f2f2f2;
+    -moz-box-shadow: inset 0 1px 0 0 #f2f2f2;
+    box-shadow: inset 0 1px 0 0 #f2f2f2;
+    color: #163659;
+    cursor: pointer;
+}
+
+button:active {
+    border: 1px solid #8c98a7;
+    -webkit-box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee;
+    -moz-box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee;
+    box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee;}
 
 input.number {
 	text-align: right;
@@ -291,7 +323,7 @@ input:hover { }
 */
 
 select {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 100%;
 	background: transparent;
 	border-width: 1px;
@@ -377,7 +409,7 @@ textarea.texterror {
 
 /* From merge, uncomment to apply styles
 textarea {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 12px;
 }
 
@@ -415,7 +447,7 @@ div.csv {
         VISIBILITY: visible;
         MARGIN: 0 auto;
         POSITION: static;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
         padding-top: 1px;
         padding-bottom: 1px;
         font-weight: normal;
@@ -425,7 +457,7 @@ div.csv {
 End Merge */
 
 .callout_main {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	background-color: white;
 	border: none;
 	width: 100%;
@@ -464,7 +496,7 @@ End Merge */
 /*The main page heading left part before quick menu */
 .quick_menu_left {
 	background: none;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 100%;
 	font-weight: bold;
 	border: none;
@@ -611,7 +643,7 @@ End Merge */
 }
 
 span.main_menu_nolink {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 100%;
 	font-weight: bold;
 	color: #777;
@@ -655,7 +687,7 @@ span.main_menu_nolink {
 }
 
 .menu_group_headers_text {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 100%;
 	font-weight: bold;
 	color: black;
@@ -679,7 +711,7 @@ span.main_menu_nolink {
 }
 
 p.page_title_text {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
         padding-top: 2px;
         padding-bottom: 2px;
         font-weight: bold;
@@ -744,7 +776,7 @@ DIV.system_check {
 End merge */
 
 span.menu_group_nolink {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 100%;
 	font-weight: normal;
 	color: #777;
@@ -779,7 +811,7 @@ a.footer {
 End merge */
 
 .footer {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	color: black;
 	font-weight: normal;
 	font-size: 10px;
@@ -787,7 +819,7 @@ End merge */
 }
 
 .legal {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 9px;
 	color: #333333;
 }
@@ -799,19 +831,19 @@ End merge */
 }
 
 .promo {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	color: #003;
 }
 
 .titlebar {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	font-size: 9px;
 	color: white;
   	background-color: #369;
 }
 
 .dingbat {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 	background-color: #9c9;
 	color: #066;
 	font-weight: bolder;
