--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -265,21 +265,20 @@ input:hover {
 }
 
 button {
-  background-color: #9F9F9F;
-  border-top: 1px solid #abbbcc;
+  background-color: #C4C4C4;
+  border-top: 1px solid #a1afbf;
   border-left: 1px solid #a7b6c7;
   border-bottom: 1px solid #a1afbf;
   border-right: 1px solid #a7b6c7;
   -webkit-border-radius: 12px;
   -moz-border-radius: 12px;
-  border-radius: 12px;
-  -webkit-box-shadow: inset 0 1px 0 0 white;
-  -moz-box-shadow: inset 0 1px 0 0 white;
-  box-shadow: inset 0 1px 0 0 white;
+  border-radius: 7px;
+  -webkit-box-shadow: inset 0 0px 0 0 white;
+  -moz-box-shadow: inset 0 0px 0 0 white;
+  box-shadow: inset 0 0px 0 0 white;
   color: #092442;
   font: normal 10px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-  line-height: 1;
-  padding: 3px 3px 3px 3px;
+  padding: 1px 1px 1px 1px;
   margin-right: 3px;
   text-align: center;
 }
@@ -298,7 +297,7 @@ button {
     border-right: 1px solid #9caaba;
     -webkit-box-shadow: inset 0 1px 0 0 #f2f2f2;
     -moz-box-shadow: inset 0 1px 0 0 #f2f2f2;
-    box-shadow: inset 0 1px 0 0 #f2f2f2;
+    box-shadow: inset 0 0px 0 0 #f2f2f2;
     color: #163659;
     cursor: pointer;
 }
@@ -714,7 +713,7 @@ p.page_title_text {
         font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
         padding-top: 2px;
         padding-bottom: 2px;
-        font-weight: bold;
+        font-weight: normal;
         font-size: 150%;
         color: white;
         background-color: #7A7A89;
@@ -881,8 +880,8 @@ select.selecterror {
 }
 
 .OsRow {
-	background-color: #234567;
-	color: white;
+	background-color: #FFDAE1;
+	color: #510D19;
 }
 /* From merge, uncomment to apply style
 .table_index {
