--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -273,9 +273,9 @@ button {
   -webkit-border-radius: 12px;
   -moz-border-radius: 12px;
   border-radius: 7px;
-  -webkit-box-shadow: inset 0 0px 0 0 white;
-  -moz-box-shadow: inset 0 0px 0 0 white;
-  box-shadow: inset 0 0px 0 0 white;
+	-moz-box-shadow: 0px 0px 2px 1px #CECECE;
+	-webkit-box-shadow: 0px 0px 2px 1px #CECECE;
+	box-shadow: 0px 0px 2px 1px #CECECE;
   color: #092442;
   font: normal 10px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
   padding: 1px 1px 1px 1px;
@@ -295,9 +295,9 @@ button {
     border-left: 1px solid #9caaba;
     border-bottom: 1px solid #96a3b3;
     border-right: 1px solid #9caaba;
-    -webkit-box-shadow: inset 0 1px 0 0 #f2f2f2;
-    -moz-box-shadow: inset 0 1px 0 0 #f2f2f2;
-    box-shadow: inset 0 0px 0 0 #f2f2f2;
+	-moz-box-shadow: 0px 0px 2px 1px #CECECE;
+	-webkit-box-shadow: 0px 0px 2px 1px #CECECE;
+	box-shadow: 0px 0px 2px 1px #CECECE;
     color: #163659;
     cursor: pointer;
 }
