--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -108,7 +108,7 @@ th.header {
 /*table detail items default format */
 td {
 	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-	font-size: 100%;
+	font-size: 10px;
 	text-align: left;
 	background-color: transparent;
 }
@@ -233,7 +233,7 @@ textarea {
 
 input {
 	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-	font-size: 100%;
+	font-size: 10px;
 	background-color: transparent;
 	border-width:1px;
     color:#645959;
@@ -323,7 +323,7 @@ input:hover { }
 
 select {
 	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-	font-size: 100%;
+	font-size: 10px;
 	background: transparent;
 	border-width: 1px;
 	border-bottom-color: gray;
@@ -794,7 +794,9 @@ span.menu_group_nolink {
 	border-top: solid 1px #aaa;
 	border-bottom: solid 1px #aaa;
 	border-radius: 6px;
-	background: #ccc url(images/menu_bg_grey.png) 0px 0px repeat-x;
+	background: -moz-linear-gradient(left, #EEE7E7, #9CA4AE);
+	background: -webkit-linear-gradient(left, #EEE7E7, #9CA4AE);
+	border: solid #A49999 1px;
 	position: relative;
 	bottom: -3px;
 	width: 99%;
