--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -121,6 +121,7 @@ td.select {
 
 table.selection {
 	margin-bottom: 5px;
+	background: #EEE7E7;
 	background: -moz-linear-gradient(left, #EEE7E7, #9CA4AE);
 	background: -webkit-linear-gradient(left, #EEE7E7, #9CA4AE);
 	border: solid #A49999 1px;
@@ -264,50 +265,36 @@ input:hover {
 	border-radius: 3px;
 }
 
+
 button {
-  background-color: #C4C4C4;
-  border-top: 1px solid #a1afbf;
-  border-left: 1px solid #a7b6c7;
-  border-bottom: 1px solid #a1afbf;
-  border-right: 1px solid #a7b6c7;
-  -webkit-border-radius: 12px;
-  -moz-border-radius: 12px;
-  border-radius: 7px;
-	-moz-box-shadow: 0px 0px 2px 1px #CECECE;
-	-webkit-box-shadow: 0px 0px 2px 1px #CECECE;
-	box-shadow: 0px 0px 2px 1px #CECECE;
-  color: #092442;
-  font: normal 10px "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-  padding: 1px 1px 1px 1px;
-  margin-right: 3px;
-  text-align: center;
-}
-
- button:hover {
-    background-color: #ccd9e8;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ccd9e8), color-stop(100%, #c1d4e8));
-    background-image: -webkit-linear-gradient(top, #ccd9e8, #c1d4e8);
-    background-image: -moz-linear-gradient(top, #ccd9e8, #c1d4e8);
-    background-image: -ms-linear-gradient(top, #ccd9e8, #c1d4e8);
-    background-image: -o-linear-gradient(top, #ccd9e8, #c1d4e8);
-    background-image: linear-gradient(top, #ccd9e8, #c1d4e8);
-    border-top: 1px solid #a1afbf;
-    border-left: 1px solid #9caaba;
-    border-bottom: 1px solid #96a3b3;
-    border-right: 1px solid #9caaba;
-	-moz-box-shadow: 0px 0px 2px 1px #CECECE;
-	-webkit-box-shadow: 0px 0px 2px 1px #CECECE;
-	box-shadow: 0px 0px 2px 1px #CECECE;
-    color: #163659;
-    cursor: pointer;
-}
-
+   border-top: 1px solid #96d1f8;
+   background: #c1cfd9;
+   background: -webkit-gradient(linear, left top, left bottom, from(#9CA4AE), to(#EEE7E7));
+   background: -webkit-linear-gradient(top, #9CA4AE, #EEE7E7);
+   background: -moz-linear-gradient(top, #9CA4AE, #EEE7E7);
+   background: -ms-linear-gradient(top, #9CA4AE, #EEE7E7);
+   background: -o-linear-gradient(top, #9CA4AE, #EEE7E7);
+   padding: 2px 3px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   color: #484848;
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+	font-size: 10px;
+   vertical-align: middle;
+   }
+button:hover {
+   border-top-color: #638094;
+   background: #638094;
+   color: #ccc;
+   }
 button:active {
-    border: 1px solid #8c98a7;
-    -webkit-box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee;
-    -moz-box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee;
-    box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eeeeee;}
-
+   border-top-color: #1b435e;
+   background: #1b435e;
+   }
 input.number {
 	text-align: right;
 }
