Improvements to theme

--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -290,7 +290,12 @@ button {
 button:hover {
    border-top-color: #638094;
    background: #638094;
-   color: #ccc;
+  background: -webkit-gradient(linear, left top, left bottom, from(#0DA4AE), to(#FFE7E7));
+   background: -webkit-linear-gradient(top, #0DA4AE, #FFE7E7);
+   background: -moz-linear-gradient(top, #0DA4AE, #FFE7E7);
+   background: -ms-linear-gradient(top, #0DA4AE, #FFE7E7);
+   background: -o-linear-gradient(top, #0DA4AE, #FFE7E7);
+   color: #484848;
    cursor: pointer;
    }
 button:active {
